unpackaged/main/default/objects/Aspect_Discount_Setting__mdt/Aspect_Discount_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Discount Settings such as:
Discount Range for Aspect. Used to validate while creating work orders.
Specifying Discount values for various Discount Types of Reactive Work Orders</description>
    <label>Aspect Discount Setting</label>
    <pluralLabel>Aspect Discount Settings</pluralLabel>
</CustomObject>