unpackaged/main/default/objects/Aspect_Discount_Setting__mdt/fields/Discount_Upper_Limit__c.field-meta.xml
<CustomField>
    <fullName>Discount_Upper_Limit__c</fullName>
    <description>Upper limit to be specified for discounts</description>
    <label>Discount Upper Limit</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>