unpackaged/main/default/objects/Aspect_Discount_Setting__mdt/fields/X25_Discount_Pre_Vat_Amount__c.field-meta.xml
<CustomField>
    <fullName>X25_Discount_Pre_Vat_Amount__c</fullName>
    <defaultValue>20.83</defaultValue>
    <description>Reactive Work Orders have £25.00 discount to be applied after VAT, so this field is to store the value before applying VAT, which is £20.83</description>
    <label>£25 Discount Pre Vat Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>